Cover art change notifications in register 210 (#51).
The SPI slave will get a notification for each start of stream and
each time the cover art changes. Register 210 contains either a hash
of the picture data, or nothing in case there is no picture available.

Retrieval of picture data over XMODEM is not implemented yet.

Change-Id: I725739a725895e9493d782890f89888a91afb664

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -38,7 +38,7 @@ dcpd_SOURCES = \
     connman.c connman_iter.c connman_scan.c connman.h \
     connman_common.c connman_common.h \
     stream_id.h \
-    coverart.hh md5.hh \
+    coverart.hh gvariantwrapper.hh md5.hh \
     dbus_common.c dbus_common.h \
     dbus_iface.c dbus_iface.h dbus_iface_deep.h \
     dbus_handlers.h dbus_handlers_connman_agent.h \
@@ -105,6 +105,7 @@ libregisters_la_SOURCES = \
     dbusdl_dbus.h \
     stream_id.h \
     coverart.cc coverart.hh md5.cc md5.hh \
+    gvariantwrapper.cc gvariantwrapper.hh \
     actor_id.h \
     shutdown_guard.h \
     $(DBUS_IFACES)/de_tahifi_lists_errors.h \
