Register as audio source with TAPSwitch.
This commit only implements registration, nothing is done when the
source is selected or deselected.

Change-Id: I785fbbba9fe6b4b648243146e3f1f4688ffd8324

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -70,6 +70,7 @@ noinst_LTLIBRARIES = \
     libdcpd_dbus.la \
     libdbusdl_dbus.la \
     libstreamplayer_dbus.la \
+    libaudiopath_dbus.la \
     libartcache_dbus.la \
     libairable_dbus.la \
     libcredentials_dbus.la \
@@ -165,6 +166,9 @@ libdbusdl_dbus_la_CFLAGS = $(CRELAXEDWARNINGS)
 nodist_libstreamplayer_dbus_la_SOURCES = streamplayer_dbus.c streamplayer_dbus.h
 libstreamplayer_dbus_la_CFLAGS = $(CRELAXEDWARNINGS)
 
+nodist_libaudiopath_dbus_la_SOURCES = audiopath_dbus.c audiopath_dbus.h
+libaudiopath_dbus_la_CFLAGS = $(CRELAXEDWARNINGS)
+
 nodist_libartcache_dbus_la_SOURCES = artcache_dbus.c artcache_dbus.h
 libartcache_dbus_la_CFLAGS = $(CRELAXEDWARNINGS)
 
@@ -224,6 +228,10 @@ BUILT_SOURCES = \
     de_tahifi_streamplayer.h \
     de_tahifi_streamplayer.md \
     streamplayer_dbus.stamp \
+    $(nodist_libaudiopath_dbus_la_SOURCES) \
+    de_tahifi_audiopath.h \
+    de_tahifi_audiopath.md \
+    audiopath_dbus.stamp \
     $(nodist_libartcache_dbus_la_SOURCES) \
     de_tahifi_artcache.h \
     de_tahifi_artcache.md \
@@ -283,6 +291,15 @@ streamplayer_dbus.h: streamplayer_dbus.stamp
 streamplayer_dbus.stamp: $(DBUS_IFACES)/de_tahifi_streamplayer.xml
 	$(GDBUS_CODEGEN) --generate-c-code=streamplayer_dbus --c-namespace tdbus_splay --interface-prefix de.tahifi.Streamplayer. $<
 	$(DBUS_IFACES)/extract_documentation.py -i $< -o de_tahifi_streamplayer.md -H de_tahifi_streamplayer.h -c tdbus_splay -s de.tahifi.Streamplayer. -n '$(PACKAGE_NAME) (stream player)'
+	touch $@
+
+de_tahifi_audiopath.h: audiopath_dbus.stamp
+de_tahifi_audiopath.md: audiopath_dbus.stamp
+audiopath_dbus.c: audiopath_dbus.stamp
+audiopath_dbus.h: audiopath_dbus.stamp
+audiopath_dbus.stamp: $(DBUS_IFACES)/de_tahifi_audiopath.xml
+	$(GDBUS_CODEGEN) --generate-c-code=audiopath_dbus --c-namespace tdbus_aupath --interface-prefix de.tahifi.AudioPath. $<
+	$(DBUS_IFACES)/extract_documentation.py -i $< -o de_tahifi_audiopath.md -H de_tahifi_audiopath.h -c tdbus_aupath -s de.tahifi.AudioPath. -n 'Audio Paths'
 	touch $@
 
 de_tahifi_artcache.h: artcache_dbus.stamp
