--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -801,6 +801,7 @@ EXCLUDE                = \
     @abs_builddir@/src/streamplayer_dbus.c \
     @abs_builddir@/src/airable_dbus.c \
     @abs_builddir@/src/artcache_dbus.c \
+    @abs_builddir@/src/audiopath_dbus.c \
     @abs_builddir@/src/credentials_dbus.c \
     @abs_builddir@/src/connman_dbus.c \
     @abs_builddir@/src/logind_dbus.c \
