Proper audio source selection (#528).
This commit makes app mode play well together with the audio source
selection mechanisms. App mode is only entered explicitly via register
78. It is left when anothere is source is selected.

The DRCP commands for switching views emit audio source select
requests now so that the UI can behave similarly.

Change-Id: I2659f3cfa844443d7d9a32eaa37e25dc922a7656

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -72,6 +72,7 @@ test_registers_la_SOURCES = \
     mock_credentials_dbus.hh mock_credentials_dbus.cc \
     mock_airable_dbus.hh mock_airable_dbus.cc \
     mock_artcache_dbus.hh mock_artcache_dbus.cc \
+    mock_audiopath_dbus.hh mock_audiopath_dbus.cc \
     mock_logind_manager_dbus.hh mock_logind_manager_dbus.cc \
     mock_connman.hh mock_connman.cc \
     mock_os.hh mock_os.cc \
