Quick conversion to C++ to make next steps easier.
Change-Id: Ifc217721956a2f02f04c318b3210927c112c5a9a

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -136,7 +136,7 @@ libapplink_la_CXXFLAGS = $(AM_CXXFLAGS)
 libdbus_handlers_la_SOURCES = \
     dbus_handlers.c dbus_handlers.h \
     dbus_handlers_connman_agent.c dbus_handlers_connman_agent.h \
-    dbus_handlers_connman_manager.c dbus_handlers_connman_manager.h \
+    dbus_handlers_connman_manager.cc dbus_handlers_connman_manager.h \
     dbus_handlers_connman_manager_glue.h \
     networkprefs.h \
     connman_dbus.h \
