Extend network status register 50.
There are three bytes instead of two now. The first two bytes contain
the same information as before (DHCP mode and primary interface
technology).

The third, new byte indicates the connection status as status bit:
connected, connecting, WPS mode.

Change-Id: Id5a72a300650aa0c6098dc6cc4e6ab9bf6db9383

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -27,7 +27,7 @@ dcpd_SOURCES = \
     smartphone_app_send.c smartphone_app_send.h \
     actor_id.h \
     applink.h applink_variables.h \
-    network.h \
+    network.h network_status_bits.h \
     transactions.h dcpdefs.h \
     messages.c messages.h messages_glib.c messages_glib.h \
     dynamic_buffer.h drcp.h drcp_command_codes.h \
