Enforce locking of ConnMan service list singleton.
The singleton is now instantiated in its own object file. There are
two functions for taking a reference to it, const and non-const. Both
will lock the list.

Change-Id: I7cdbbfbb5fdfd2962126de56c21fbd0d47d6efba

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -37,7 +37,8 @@ dcpd_SOURCES = \
     dcpregs_upnpname.h dcpregs_searchparameters.h \
     connman.c connman_iter.c connman_scan.c connman.h \
     connman_common.c connman_common.h \
-    connman_service.cc connman_service.hh connman_service_list.hh maybe.hh \
+    connman_service.cc connman_service.hh maybe.hh \
+    connman_service_list.cc connman_service_list.hh \
     stream_id.h \
     coverart.hh gvariantwrapper.hh md5.hh \
     dbus_common.c dbus_common.h \
