Proper implementation of register 87 (#352).
This commit extends the configuration proxy implementation to
understand local keys, i.e., keys that are stored inside the dcpd
process and require no D-Bus communication. Our application.ini file
is attached to the proxy using this new mechanism.

Reading and setting the appliance ID via register 87 works now.

Change-Id: I56813d68b1bc722f188b19a9f643a7774dd4fa0e

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -46,7 +46,7 @@ dcpd_SOURCES = \
     dbus_handlers_connman_manager.h dbus_handlers_connman_manager_glue.h \
     configuration.cc configuration.hh configuration_base.hh configuration_changed.hh \
     configuration_settings.hh inifile.h \
-    configuration_dcpd.cc configuration_dcpd.hh \
+    configuration_dcpd.cc configuration_dcpd.hh configuration_dcpd.h \
     configproxy.h \
     networkprefs.h
 
