--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -38,6 +38,7 @@ dcpd_SOURCES = \
     connman_iter.c connman_scan.c connman.h \
     connman_common.c connman_common.h \
     connman_service.cc connman_service.hh connman_service_list.hh maybe.hh \
+    connman_address.hh \
     stream_id.h \
     coverart.hh gvariantwrapper.hh md5.hh \
     dbus_common.c dbus_common.h \
@@ -107,7 +108,7 @@ libregisters_la_SOURCES = \
     dcpregs_searchparameters.c dcpregs_searchparameters.h \
     dcpregs_status.h \
     dbus_handlers_connman_manager_glue.h networkprefs.h \
-    connman_service.hh connman_service_list.hh maybe.hh \
+    connman_service.hh connman_service_list.hh connman_address.hh maybe.hh\
     dbusdl_dbus.h \
     stream_id.h \
     coverart.cc coverart.hh md5.cc md5.hh \
@@ -122,7 +123,7 @@ libregisters_la_CXXFLAGS = $(AM_CXXFLAGS)
 
 libservicelist_la_SOURCES = \
     connman_service_list.cc connman_service_list.hh \
-    connman_service.hh maybe.hh \
+    connman_service.hh connman_address.hh maybe.hh \
     messages.h
 libservicelist_la_CFLAGS = $(AM_CFLAGS)
 libservicelist_la_CXXFLAGS = $(AM_CXXFLAGS)
