Very quick C++ port of network preferences implementation.
Just enough to make it compile with a C++ compiler.

Change-Id: Ie0061b82532217f2dfe8601b99cf51cf23a54bf8

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -136,7 +136,7 @@ libconfigproxy_la_SOURCES = configproxy.c configproxy.h
 libconfigproxy_la_CFLAGS = $(AM_CFLAGS)
 libconfigproxy_la_CXXFLAGS = $(AM_CXXFLAGS)
 
-libnetworkprefs_la_SOURCES = networkprefs.c networkprefs.h inifile.h
+libnetworkprefs_la_SOURCES = networkprefs.cc networkprefs.h inifile.h
 libnetworkprefs_la_CFLAGS = $(AM_CFLAGS)
 libnetworkprefs_la_CXXFLAGS = $(AM_CXXFLAGS)
 
