--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -31,7 +31,7 @@ dcpd_SOURCES = \
     transactions.h dcpdefs.h \
     messages.c messages.h messages_glib.c messages_glib.h \
     dynamic_buffer.h drcp.h drcp_command_codes.h \
-    dcpregs_drcp.h dcpregs_networkconfig.h dcpregs_wlansurvey.h \
+    dcpregs_drcp.h dcpregs_networkconfig.h dcpregs_networkconfig.hh dcpregs_wlansurvey.h \
     dcpregs_filetransfer.h dcpregs_filetransfer.hh dcpregs_filetransfer_priv.h \
     dcpregs_tcptunnel.h dcpregs_playstream.h dcpregs_playstream.hh dcpregs_status.h \
     dcpregs_upnpname.h dcpregs_searchparameters.h dcpregs_appliance.h \
@@ -100,7 +100,7 @@ libregisters_la_SOURCES = \
     dcpregs_drcp.c dcpregs_drcp.h \
     dcpregs_protolevel.c dcpregs_protolevel.h \
     dcpregs_appliance.cc dcpregs_appliance.h \
-    dcpregs_networkconfig.cc dcpregs_networkconfig.h \
+    dcpregs_networkconfig.cc dcpregs_networkconfig.h dcpregs_networkconfig.hh \
     dcpregs_upnpname.c dcpregs_upnpname.h \
     dcpregs_wlansurvey.c dcpregs_wlansurvey.h \
     dcpregs_filetransfer.cc dcpregs_filetransfer.h dcpregs_filetransfer.hh dcpregs_filetransfer_priv.h \
@@ -160,6 +160,7 @@ libdbus_handlers_la_SOURCES = \
     connman_dbus.h \
     actor_id.h \
     dcpregs_networkconfig.h \
+    dcpregs_networkconfig.hh \
     dcpregs_upnpname.h \
     dcpregs_wlansurvey.h \
     dcpregs_filetransfer.h \
