Very quick C++ port of UPnP friendly name implementation.
Just enough to make it compile with a C++ compiler.

Change-Id: I5a12ac1d09c9cd8c9b3c64b9afc763c67553afb1

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -101,7 +101,7 @@ libregisters_la_SOURCES = \
     dcpregs_protolevel.c dcpregs_protolevel.h \
     dcpregs_appliance.cc dcpregs_appliance.h \
     dcpregs_networkconfig.cc dcpregs_networkconfig.h dcpregs_networkconfig.hh \
-    dcpregs_upnpname.c dcpregs_upnpname.h \
+    dcpregs_upnpname.cc dcpregs_upnpname.h \
     dcpregs_wlansurvey.c dcpregs_wlansurvey.h \
     dcpregs_filetransfer.cc dcpregs_filetransfer.h dcpregs_filetransfer.hh dcpregs_filetransfer_priv.h \
     dcpregs_tcptunnel.c dcpregs_tcptunnel.h \
