--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -34,7 +34,7 @@ dcpd_SOURCES = \
     dcpregs_drcp.h dcpregs_networkconfig.h dcpregs_networkconfig.hh dcpregs_wlansurvey.h \
     dcpregs_filetransfer.h dcpregs_filetransfer.hh dcpregs_filetransfer_priv.h \
     dcpregs_tcptunnel.h dcpregs_playstream.h dcpregs_playstream.hh dcpregs_status.h \
-    dcpregs_upnpname.h dcpregs_upnpname.hh \
+    dcpregs_upnpname.h dcpregs_upnpname.hh dcpregs_audiosources.h \
     dcpregs_searchparameters.h dcpregs_appliance.h \
     connman_iter.c connman_scan.c connman.h \
     connman_common.c connman_common.h \
@@ -107,6 +107,7 @@ libregisters_la_SOURCES = \
     dcpregs_wlansurvey.c dcpregs_wlansurvey.h \
     dcpregs_filetransfer.cc dcpregs_filetransfer.h dcpregs_filetransfer.hh dcpregs_filetransfer_priv.h \
     dcpregs_tcptunnel.c dcpregs_tcptunnel.h \
+    dcpregs_audiosources.cc dcpregs_audiosources.h \
     dcpregs_playstream.cc dcpregs_playstream.h dcpregs_playstream.hh \
     dcpregs_mediaservices.c dcpregs_mediaservices.h \
     dcpregs_searchparameters.c dcpregs_searchparameters.h \
@@ -166,6 +167,7 @@ libdbus_handlers_la_SOURCES = \
     dcpregs_upnpname.h \
     dcpregs_wlansurvey.h \
     dcpregs_filetransfer.h \
+    dcpregs_audiosources.h \
     dcpregs_playstream.h \
     dcpregs_status.h
 libdbus_handlers_la_CFLAGS = $(AM_CFLAGS)
