--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -805,6 +805,7 @@ EXCLUDE                = \
     @abs_builddir@/src/credentials_dbus.c \
     @abs_builddir@/src/connman_dbus.c \
     @abs_builddir@/src/logind_dbus.c \
+    @abs_builddir@/src/systemd_dbus.c \
     @abs_srcdir@/dbus_interfaces/de_tahifi_lists_errors.hh \
     @abs_srcdir@/dbus_interfaces/*.xml
 
