Quick conversion of dbus_handlers.c to C++.
The gap between C and C++ in this part of the code base becomes more
and more problematic, and only for historic reason. This commit puts
this misery to an end.

Change-Id: Iecb9c83a4a19cde339dad48a1d07d61af1235db9

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -157,7 +157,7 @@ libapplink_la_CFLAGS = $(AM_CFLAGS)
 libapplink_la_CXXFLAGS = $(AM_CXXFLAGS)
 
 libdbus_handlers_la_SOURCES = \
-    dbus_handlers.c dbus_handlers.h \
+    dbus_handlers.cc dbus_handlers.h \
     dbus_handlers_connman_agent.c dbus_handlers_connman_agent.h connman_agent.h \
     dbus_handlers_connman_manager.cc dbus_handlers_connman_manager.h \
     dbus_handlers_connman_manager_glue.h \
