Implement register 64 for volume control (#549).
Change-Id: Ib279c35320193457b02337300d54105b8c3ddc4e

--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -802,6 +802,7 @@ EXCLUDE                = \
     @abs_builddir@/src/airable_dbus.c \
     @abs_builddir@/src/artcache_dbus.c \
     @abs_builddir@/src/audiopath_dbus.c \
+    @abs_builddir@/src/mixer_dbus.c \
     @abs_builddir@/src/credentials_dbus.c \
     @abs_builddir@/src/connman_dbus.c \
     @abs_builddir@/src/logind_dbus.c \
