--- a/Makefile.am
+++ b/Makefile.am
@@ -40,6 +40,7 @@ EXTRA_DIST += \
     dbus_interfaces/de_tahifi_artcache_monitor_errors.h \
     dbus_interfaces/de_tahifi_artcache_read_errors.h \
     dbus_interfaces/de_tahifi_audiopath.xml \
+    dbus_interfaces/de_tahifi_mixer.xml \
     dbus_interfaces/de_tahifi_credentials.xml \
     dbus_interfaces/net_connman.xml \
     dbus_interfaces/org_freedesktop_login1.xml \
