Add register 47 for language/country configuration (#416).
Change-Id: I08917b2a3c01b1590100ec5ba103774a8c4f87fe

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -36,7 +36,7 @@ dcpd_SOURCES = \
     dcpregs_filetransfer.h dcpregs_filetransfer.hh dcpregs_filetransfer_priv.h \
     dcpregs_tcptunnel.h dcpregs_playstream.h dcpregs_playstream.hh dcpregs_status.h \
     dcpregs_upnpname.h dcpregs_upnpname.hh dcpregs_audiosources.h dcpregs_volume.h \
-    dcpregs_searchparameters.h dcpregs_appliance.h \
+    dcpregs_searchparameters.h dcpregs_appliance.h dcpregs_internationalization.h \
     connman_iter.c connman_scan.c connman.h \
     connman_common.c connman_common.h \
     connman_service.cc connman_service.hh connman_service_list.hh maybe.hh \
@@ -105,6 +105,7 @@ libregisters_la_SOURCES = \
     dcpregs_drcp.c dcpregs_drcp.h \
     dcpregs_protolevel.c dcpregs_protolevel.h \
     dcpregs_appliance.cc dcpregs_appliance.h \
+    dcpregs_internationalization.cc dcpregs_internationalization.h \
     dcpregs_networkconfig.cc dcpregs_networkconfig.h dcpregs_networkconfig.hh \
     dcpregs_upnpname.cc dcpregs_upnpname.h dcpregs_upnpname.hh \
     dcpregs_wlansurvey.c dcpregs_wlansurvey.h \
