Convert TCP tunnel handling to C++.
Extension to more peers or multiple applink connections would have
become painful, so better switch to C++ to keep the level of pain low.
This new implementation can easily cope with many connections,
efficiently so.

Extension to queued TCP transactions is quite trivial now as well (we
will need this to get simultaneous writes from multiple clients
supported).

For practical purposes and to avoid DOS attacks over the network, we
restrict the number of TCP tunnels to be created by the ARM to a
maximum of 10, and allow up to 20 peer connections per tunnel. Note
that these restrictions are artificial and arbitrary, they are not
limitations imposed by the implementation itself.

Change-Id: I7deb670159476b8a4365d913c3d1c2611719b622

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -110,7 +110,7 @@ libregisters_la_SOURCES = \
     dcpregs_upnpname.cc dcpregs_upnpname.h dcpregs_upnpname.hh \
     dcpregs_wlansurvey.c dcpregs_wlansurvey.h \
     dcpregs_filetransfer.cc dcpregs_filetransfer.h dcpregs_filetransfer.hh dcpregs_filetransfer_priv.h \
-    dcpregs_tcptunnel.c dcpregs_tcptunnel.h \
+    dcpregs_tcptunnel.cc dcpregs_tcptunnel.h \
     dcpregs_audiosources.cc dcpregs_audiosources.h \
     dcpregs_playstream.cc dcpregs_playstream.h dcpregs_playstream.hh \
     dcpregs_mediaservices.c dcpregs_mediaservices.h \
@@ -237,7 +237,7 @@ libxmodem_la_CFLAGS = $(AM_CFLAGS)
 libxmodem_la_CXXFLAGS = $(AM_CXXFLAGS)
 
 libnetwork_dispatcher_la_SOURCES = \
-    network_dispatcher.c network_dispatcher.h \
+    network_dispatcher.cc network_dispatcher.hh \
     network.c network.h \
     messages.h
 libnetwork_dispatcher_la_CFLAGS = $(AM_CFLAGS)
