Dump DCP+DCPSYNC data sent to dcpspi to log.
For regular traffic over SPI, the log level must be set to "trace" to
see the logs. This is because dcpspi has its own (better) means of
dumping data to log, so the output of dcpd is probably only useful for
debugging communication between dcpd and dcpspi.

For traffic over TCP, the required log level is "normal".

Change-Id: If6e1840c0da155122f7843971b0dc585f45511ab

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,5 @@
 #
-# Copyright (C) 2015, 2016, 2017  T+A elektroakustik GmbH & Co. KG
+# Copyright (C) 2015, 2016, 2017, 2018  T+A elektroakustik GmbH & Co. KG
 #
 # This file is part of DCPD.
 #
@@ -227,6 +227,7 @@ libdrcpdcomm_la_CXXFLAGS = $(AM_CXXFLAGS)
 
 libtransactions_la_SOURCES = \
     transactions.c transactions.h os.h \
+    hexdump.c hexdump.h \
     dynamic_buffer.h registers.h named_pipe.h dcpdefs.h messages.h
 libtransactions_la_CFLAGS = $(AM_CFLAGS)
 libtransactions_la_CXXFLAGS = $(AM_CXXFLAGS)
